[workspace]
members = [
    "xtask",
    "ch1",
    "ch1-lab",
    "ch2",
    "ch3",
    "ch4",
    "ch5",
    "ch6",
    "ch7",
    "ch8",
    "user",
    "tg-linker",
    "tg-console",
    "tg-syscall",
    "tg-kernel-context",
    "tg-kernel-alloc",
    "tg-kernel-vm",
    "tg-task-manage",
    "tg-easy-fs",
    "tg-signal-defs",
    "tg-signal",
    "tg-signal-impl",
    "tg-sync",
]
default-members = ["xtask"]
resolver = "2"
