[package]
name = "tg-ch1-lab"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = []
nobios = [
    "tg-sbi/nobios",
]

[dependencies]
tg-sbi = { path = "../tg-sbi", version = "0.1.0-preview.1" }
tg-console = { path = "../tg-console", version = "0.1.0-preview.2" }
