[package]
name = "tg-ch1"
description = "Chapter 1 of rCore Tutorial: A minimal bare-metal application running in RISC-V S-mode."
version = "0.1.0-preview.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-ch1"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "bare-metal"]
categories = ["no-std", "embedded"]

[features]
default = []
nobios = [
    "tg-sbi/nobios",
]

[dependencies]
tg-sbi = { path = "../tg-sbi", version = "0.1.0-preview.1" }