[package]
name = "ch2"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = []
nobios = []

[dependencies]
riscv = "0.10.1"

linker = { path = "../linker" }
rcore-console = { path = "../console" }
kernel-context = { path = "../kernel-context" }
syscall = { path = "../syscall", features = ["kernel"] }

[build-dependencies]
linker = { path = "../linker" }
