[package]
name = "tg-ch3"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = "0.10.1"

tg-linker = { path = "../tg-linker" }
tg-console = { path = "../tg-console" }
tg-kernel-context = { path = "../tg-kernel-context" }
tg-syscall = { path = "../tg-syscall", features = ["kernel"] }

[build-dependencies]
tg-linker = { path = "../tg-linker" }

[features]
coop = []
