[package]
name = "ch4"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

[features]
default = []
nobios = [
    "sbi/nobios",
]

[dependencies]
xmas-elf = "0.8.0"
riscv = "0.10.1"

sbi = { path = "../sbi" }
linker = { path = "../linker" }
rcore-console = { path = "../console" }
kernel-context = { path = "../kernel-context", features = ["foreign"] }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }

[build-dependencies]
linker = { path = "../linker" }
