[package]
name = "ch5"
version = "0.0.1"
edition = "2021"
authors = ["zflcs <1491657576@qq.com>"]

[features]
default = []
nobios = [
    "sbi/nobios",
]

[dependencies]
xmas-elf = "0.8.0"
riscv = "0.10.1"
spin = "0.9"

sbi = { path = "../sbi" }
linker = { path = "../linker" }
rcore-console = { path = "../console" }
kernel-context = { path = "../kernel-context", features = ["foreign"] }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
rcore-task-manage = { path = "../task-manage", features = ["proc"] }

[build-dependencies]
linker = { path = "../linker" }
