[package]
name = "ch6"
version = "0.0.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]

[features]
default = []
nobios = [
    "sbi/nobios",
]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.8.0"
riscv = "0.10.1"
spin = "0.9"

sbi = { path = "../sbi" }
linker = { path = "../linker" }
rcore-console = { path = "../console" }
kernel-context = { path = "../kernel-context", features = ["foreign"] }
kernel-alloc = { path = "../kernel-alloc" }
kernel-vm = { path = "../kernel-vm" }
syscall = { path = "../syscall", features = ["kernel"] }
rcore-task-manage = { path = "../task-manage", features = ["proc"] }
easy-fs = { path = "../easy-fs" }

[build-dependencies]
linker = { path = "../linker" }
