[package]
name = "tg-ch6"
version = "0.0.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]

[dependencies]
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
sbi-rt = { version = "0.0.2", features = ["legacy"] }
xmas-elf = "0.8.0"
riscv = "0.10.1"
spin = "0.9"

tg-linker = { path = "../tg-linker" }
tg-console = { path = "../tg-console" }
tg-kernel-context = { path = "../tg-kernel-context", features = ["foreign"] }
tg-kernel-alloc = { path = "../tg-kernel-alloc" }
tg-kernel-vm = { path = "../tg-kernel-vm" }
tg-syscall = { path = "../tg-syscall", features = ["kernel"] }
tg-task-manage = { path = "../tg-task-manage", features = ["proc"] }
tg-easy-fs = { path = "../tg-easy-fs" }

[build-dependencies]
tg-linker = { path = "../tg-linker" }
