[package]
name = "tg-ch6"
description = "Chapter 6 of rCore Tutorial: File system with easy-fs and virtio block device."
version = "0.1.0-preview.1"
edition = "2021"
authors = ["tkf2019 <kaifu6821@qq.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
documentation = "https://docs.rs/tg-ch6"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "filesystem"]
categories = ["no-std", "embedded"]

[features]
default = []
nobios = [
    "tg-sbi/nobios",
]

[profile.dev]
panic = "abort"

[dependencies]
virtio-drivers = "0.1.0"
xmas-elf = "0.8.0"
riscv = "0.10.1"
spin = "0.9"

tg-sbi = { path = "../tg-sbi", version = "0.1.0-preview.1" }
tg-linker = { path = "../tg-linker", version = "0.1.0-preview.2" }
tg-console = { path = "../tg-console", version = "0.1.0-preview.2" }
tg-kernel-context = { path = "../tg-kernel-context", version = "0.1.0-preview.1", features = ["foreign"] }
tg-kernel-alloc = { path = "../tg-kernel-alloc", version = "0.1.0-preview.2" }
tg-kernel-vm = { path = "../tg-kernel-vm", version = "0.1.0-preview.2" }
tg-syscall = { path = "../tg-syscall", version = "0.1.0-preview.2", features = ["kernel"] }
tg-task-manage = { path = "../tg-task-manage", version = "0.1.0-preview.1", features = ["proc"] }
tg-easy-fs = { path = "../tg-easy-fs", version = "0.1.0-preview.2" }

[build-dependencies]
tg-linker = { path = "../tg-linker", version = "0.1.0-preview.2" }
